--- a/index.html
+++ b/index.html
@@ -177,6 +177,10 @@
         .input-error {
           border-color: #ad2a24;
         }
+
+        #calculateBtn{
+        background-color: #4CAF50 
+        }
         @media (max-width: 600px) {
           .dimension-row {
             flex-direction: column;
